# claude-rlm

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  hooks.example.json  install.ps1  install.sh
.claude-plugin/: plugin.json
.github/workflows/: release.yml
commands/: status.md
hooks/: hooks.json
scripts/: bootstrap  bootstrap.cmd
skills/setup/: SKILL.md
src/: llm.rs  main.rs  server.rs  update.rs  watcher.rs
src/db/: mod.rs  schema.rs  search.rs  tasks.rs
src/hooks/: compact.rs  mod.rs  pre_tool_use.rs  prompt.rs  session.rs  tool_use.rs
src/indexer/: code.rs  conversation.rs  distill.rs  files.rs  git.rs  mod.rs  plans.rs
src/inject/: mod.rs  ranking.rs
src/treesitter/: languages.rs  symbols.rs
